--- a/package.json
+++ b/package.json
@@ -141,14 +141,17 @@
         "runtime": "node",
         "configurationAttributes": {
           "launch": {
-            "required": [
-              "program"
-            ],
+            "required": ["program"],
             "properties": {
               "program": {
                 "type": "string",
-                "description": "Absolute path to a text file.",
+                "description": "Absolute path to an APL file.",
                 "default": "${workspaceFolder}/${command:AskForProgramName}"
+              },
+              "cwd": {
+                "type": "string",
+                "description": "Absolute path to a foler.",
+                "default": "${workspaceFolder}"
               },
               "stopOnEntry": {
                 "type": "boolean",
@@ -169,6 +172,7 @@
             "request": "launch",
             "name": "Ask for file name",
             "program": "${workspaceFolder}/${command:AskForProgramName}",
+            "cwd": "${workspaceFolder}",
             "stopOnEntry": true
           }
         ],
@@ -181,6 +185,7 @@
               "request": "launch",
               "name": "Ask for file name",
               "program": "^\"\\${workspaceFolder}/\\${command:AskForProgramName}\"",
+              "cwd": "^\"\\${workspaceFolder}\"",
               "stopOnEntry": true
             }
           }
