--- a/sampleWorkspace/.vscode/launch.json
+++ b/sampleWorkspace/.vscode/launch.json
@@ -7,7 +7,8 @@
 		{
 			"type": "apl",
 			"request": "launch",
-			"name": "Debug current file",
+			"name": "Debug current file 18.0",
+			"exe": "C:\\Program Files\\Dyalog\\Dyalog APL-64 18.0 Unicode\\dyalog.exe",
 			"program": "${file}",
 			"cwd": "${workspaceFolder}",
 			"stopOnEntry": true,
@@ -16,7 +17,28 @@
 		{
 			"type": "apl",
 			"request": "launch",
-			"name": "Debug current workspace",
+			"name": "Debug current workspace 18.0",
+			"exe": "C:\\Program Files\\Dyalog\\Dyalog APL-64 18.0 Unicode\\dyalog.exe",
+			"program": "",
+			"cwd": "${workspaceFolder}",
+			"stopOnEntry": true,
+			"trace": false
+		},
+		{
+			"type": "apl",
+			"request": "launch",
+			"name": "Debug current file 18.1",
+			"exe": "C:\\Program Files\\Dyalog\\Dyalog APL-64 18.1 Unicode\\dyalog.exe",
+			"program": "${file}",
+			"cwd": "${workspaceFolder}",
+			"stopOnEntry": true,
+			"trace": false
+		},
+		{
+			"type": "apl",
+			"request": "launch",
+			"name": "Debug current workspace 18.1",
+			"exe": "C:\\Program Files\\Dyalog\\Dyalog APL-64 18.1 Unicode\\dyalog.exe",
 			"program": "",
 			"cwd": "${workspaceFolder}",
 			"stopOnEntry": true,
