--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,6 @@
 	// for the documentation about the extensions.json format
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
-		"eamodio.tsl-problem-matcher"
+		"connor4312.esbuild-problem-matchers"
 	]
 }
