--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apl-debug",
   "displayName": "APL Debug",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "publisher": "Tiamatica",
   "description": "APL debug adapter for VS Code.",
   "author": {
@@ -14,7 +14,7 @@
     "multi-root ready"
   ],
   "engines": {
-    "vscode": "^1.55.0"
+    "vscode": "^1.66.0"
   },
   "icon": "images/logo.png",
   "categories": [
@@ -29,49 +29,45 @@
     "url": "https://github.com/tiamatica/vscode-apl-debug/issues"
   },
   "scripts": {
-    "vscode:prepublish": "npm run package-ext && npm run package-web",
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
-    "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./build/extension.webpack.config.js",
-    "watch2": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --tsconfig=./tsconfig.json --external:vscode --format=cjs --platform=node --outfile=dist/extension.js",
+    "watch": "npm run -S esbuild-base -- --sourcemap --sources-content=false --watch",
+    "build": "npm run -S esbuild-base -- --sourcemap --sources-content=false",
     "package": "vsce package",
     "publish": "vsce publish",
-    "package-ext": "webpack --mode production --config ./build/extension.webpack.config.js",
-    "compile-web": "webpack --devtool nosources-source-map --config ./build/web-extension.webpack.config.js",
-    "watch-web": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./build/web-extension.webpack.config.js",
-    "package-web": "webpack --mode production --config ./build/web-extension.webpack.config.js"
-  },
-  "dependencies": {
-    "await-notify": "1.0.1",
-    "vscode-debugadapter": "^1.51.0"
+    "publish-pre-release": "vsce publish --pre-release",
+    "vscode:prepublish": "rimraf dist && npm run -S esbuild-base -- --minify",
+    "test": "npm run typecheck"
   },
   "devDependencies": {
-    "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.16.9",
-    "@types/vscode": "^1.78.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
-    "glob": "^10.2.4",
-    "mocha": "^10.2.0",
-    "ts-loader": "^8.1.0",
-    "typescript": "^5.0.4",
-    "vsce": "^2.15.0",
-    "vscode-debugadapter-testsupport": "^1.51.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^14.14.37",
+    "@types/vscode": "^1.66.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vscode/debugadapter": "^1.56.0",
+    "@vscode/debugadapter-testsupport": "^1.56.0",
+    "await-notify": "^1.0.1",
+    "base64-js": "^1.5.1",
+    "esbuild": "^0.14.29",
+    "eslint": "^8.12.0",
+    "events": "^3.3.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.2",
+    "path-browserify": "^1.0.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.6.3",
+    "url": "^0.11.0",
+    "vsce": "^2.7.0"
   },
-  "main": "./dist/ext/extension.js",
-  "browser": "./dist/web/extension.js",
+  "main": "./dist/extension.js",
   "activationEvents": [
     "onDebugResolve:apl",
     "onDebugDynamicConfigurations:apl",
-    "onCommand:extension.apl-debug.getProgramName",
-    "onCommand:extension.apl-debug.runEditorContents",
-    "onCommand:extension.apl-debug.debugEditorContents"
+    "onCommand:extension.apl-debug.getProgramName"
   ],
   "workspaceTrust": {
     "request": "never"
@@ -132,11 +128,13 @@
       "editor/title/run": [
         {
           "command": "extension.apl-debug.runEditorContents",
-          "when": "resourceLangId == apl"
+          "when": "resourceLangId == apl",
+          "group": "navigation@1"
         },
         {
           "command": "extension.apl-debug.debugEditorContents",
-          "when": "resourceLangId == apl"
+          "when": "resourceLangId == apl",
+          "group": "navigation@2"
         }
       ],
       "commandPalette": [
