--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es6",
+		"target": "ES2020",
 		"outDir": "out",
 		"lib": [
-			"es6"
+			"WebWorker",
+			"ES2020"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
